<resources>
    <string name="app_name">Android-111</string>

    <!-- MAIN ACTIVITY -->
    <string name="main_page_title">Знайомство з Андроїд</string>
    <string name="main_game_tic_tac_toe_button">Хрестики Нолики</string>
    <string name="main_calc_button">Калькулятор</string>
    <string name="main_game_button">Свайпи. Гра</string>
    <string name="main_rates_button">Інтернет. Курси валют</string>
    <string name="main_chat_button">Обмін даними. Чат</string>
    <string name="main_anim_button">Анімації</string>


    <!-- game_tic_tac_toe  -->
    <string name="game_tic_tac_toe_player_1_time">P1 T:</string>
    <string name="game_tic_tac_toe_player_2_time">P2 T:</string>
    <string name="game_tic_tac_toe_time_template">%d c</string>

    <!-- region CALC ACTIVITY -->
    <string name="calc_page_title">Калькулятор</string>
    <string name="calc_btn_percent">%</string>
    <string name="calc_btn_ce">CE</string>
    <string name="calc_btn_c">C</string>
    <string name="calc_btn_backspace">\u232B</string>
    <string name="calc_btn_inverse">\u00B9/\u2093</string>
    <string name="calc_btn_square">x\u00B2</string>
    <string name="calc_btn_sqrt">\u221A\u2093\u0304</string>
    <string name="calc_btn_divide">\u00F7</string>
    <string name="calc_btn_multiply">\u2715</string>
    <string name="calc_btn_minus">\u2014</string>
    <string name="calc_btn_plus">\uFF0B</string>
    <string name="calc_btn_pm">\u00B1</string>
    <string name="calc_btn_comma">,</string>
    <string name="calc_btn_equal">\uFF1D</string>
    <string name="calc_zero_division">DIV BY 0</string>
    <string name="calc_zero_division_toast">Division by zero</string>
    <string name="calc_btn_0">\uA668</string>
    <string name="calc_btn_1">1</string>
    <string name="calc_btn_2">2</string>
    <string name="calc_btn_3">3</string>
    <string name="calc_btn_4">4</string>
    <string name="calc_btn_5">5</string>
    <string name="calc_btn_6">6</string>
    <string name="calc_btn_7">7</string>
    <string name="calc_btn_8">8</string>
    <string name="calc_btn_9">9</string>
    <!-- endregion -->

    <!-- GAME -->
    <string name="game_final_title">Гру завершено</string>
    <string name="game_final_message">Бажаєте зіграти ще раз?</string>
    <string name="game_final_positive">Повторити</string>
    <string name="game_final_negative">Вийти</string>
    <string name="game_time">TIME:</string>
    <string name="game_time_best">BEST:</string>
    <string name="game_score">SCORE:</string>
    <string name="game_score_best">BEST:</string>
    <string name="game_time_template">%d c</string>

    <!-- CHAT -->
    <string name="chat_name_label">Ім\'я</string>
    <string name="chat_message_line1">%s %s</string>
    <string name="chat_no_author_alert">Заповніть поле \'Автор\'</string>
    <string name="chat_no_message_alert">Введіть повідомлення</string>

</resources>