<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/main_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_page_title"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <Button
        android:id="@+id/main_button_calc"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="80dp"
        android:layout_height="wrap_content"
        android:background="@drawable/main_btn_shape"
        android:text="@string/main_calc_button"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_tv_title"
        app:layout_constraintVertical_bias="0.1" />


    <Button
        android:id="@+id/main_button_game"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="80dp"
        android:layout_height="wrap_content"
        android:background="@drawable/main_btn_shape"
        android:text="@string/main_game_button"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_tv_title"
        app:layout_constraintVertical_bias="0.3" />

    <Button
        android:id="@+id/main_button_rates"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="80dp"
        android:layout_height="wrap_content"
        android:background="@drawable/main_btn_shape"
        android:text="@string/main_rates_button"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_tv_title"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/main_button_chat"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="80dp"
        android:layout_height="wrap_content"
        android:background="@drawable/main_btn_shape"
        android:text="@string/main_chat_button"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_tv_title"
        app:layout_constraintVertical_bias="0.7" />

    <Button
        android:id="@+id/main_button_anim"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="80dp"
        android:layout_height="wrap_content"
        android:background="@drawable/main_btn_shape"
        android:text="@string/main_anim_button"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_tv_title"
        app:layout_constraintVertical_bias="0.9" />

</androidx.constraintlayout.widget.ConstraintLayout>